# qf-solochain

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: build.yml
docker/: Dockerfile.arm64  Dockerfile.dev  Dockerfile.qfnode  Dockerfile.test  Dockerfile.x86_64  Makefile  README.md  qf-node-start.sh
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
node/src/res/: qf-devnet.raw.json
pallets/faucet/: Cargo.toml
pallets/faucet/src/: lib.rs  weights.rs
pallets/qf-polkavm-dev/: Cargo.toml
pallets/qf-polkavm-dev/src/: lib.rs  tests.rs  weights.rs
pvm_prog/: Cargo.toml  README.md
pvm_prog/calc/: Cargo.toml
pvm_prog/calc/src/: main.rs
pvm_prog/precompiled_examples/: qf-pvm-calc.polkavm
qf-test-runner/: Cargo.toml  README.md
qf-test-runner/src/: main.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
tmp/: lib.rs
