[workspace.package]
authors = ["Max Pestov <ealataur@gmail.com>"]
edition = "2024"
homepage = "https://quantumfusion.pro/"
license = ""
repository = "https://github.com/QuantumFusion-network"

[workspace]
resolver = "2"

members = [
    "runtime",
    "node",
    "pallets/qf-polkavm-dev"
]
exclude = [
    "old",
    "vendor"
]

[workspace.dependencies]
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.1", default-features = false }

# Node
clap = { version = "4.5.10" }
frame-benchmarking-cli = { path = "./vendor/polkadot-sdk/substrate/utils/frame/benchmarking-cli", default-features = false }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.24.7" }
pallet-transaction-payment-rpc = { path = "./vendor/polkadot-sdk/substrate/frame/transaction-payment/rpc", default-features = false }
sc-basic-authorship = { path = "./vendor/polkadot-sdk/substrate/client/basic-authorship", default-features = false }
sc-cli = { path = "./vendor/polkadot-sdk/substrate/client/cli", default-features = false }
sc-client-api = { path = "./vendor/polkadot-sdk/substrate/client/api", default-features = false }
sc-consensus = { path = "./vendor/polkadot-sdk/substrate/client/consensus/common", default-features = false }
sc-consensus-aura = { path = "./vendor/polkadot-sdk/substrate/client/consensus/aura", default-features = false }
sc-consensus-grandpa = { path = "./vendor/polkadot-sdk/substrate/client/consensus/grandpa", default-features = false }
sc-executor = { path = "./vendor/polkadot-sdk/substrate/client/executor", default-features = false }
sc-network = { path = "./vendor/polkadot-sdk/substrate/client/network", default-features = false }
sc-offchain = { path = "./vendor/polkadot-sdk/substrate/client/offchain", default-features = false }
sc-rpc-api = { path = "./vendor/polkadot-sdk/substrate/client/rpc-api", default-features = false }
sc-service = { path = "./vendor/polkadot-sdk/substrate/client/service", default-features = false }
sc-telemetry = { path = "./vendor/polkadot-sdk/substrate/client/telemetry", default-features = false }
sc-transaction-pool = { path = "./vendor/polkadot-sdk/substrate/client/transaction-pool", default-features = false }
sc-transaction-pool-api = { path = "./vendor/polkadot-sdk/substrate/client/transaction-pool/api", default-features = false }
sc-serde-json = { path = "./vendor/polkadot-sdk/substrate/client/serde_json", default-features = false }
serde_json = { version = "1.0.124", default-features = false }
qf-runtime = { path = "./runtime", default-features = false }
sp-blockchain = { path = "./vendor/polkadot-sdk/substrate/primitives/blockchain", default-features = false }
sp-io = { path = "./vendor/polkadot-sdk/substrate/primitives/io", default-features = false }
sp-keyring = { path = "./vendor/polkadot-sdk/substrate/primitives/keyring", default-features = false }
sp-timestamp = { path = "./vendor/polkadot-sdk/substrate/primitives/timestamp", default-features = false }
substrate-frame-rpc-system = { path = "./vendor/polkadot-sdk/substrate/utils/frame/rpc/system", default-features = false }
substrate-build-script-utils = { path = "./vendor/polkadot-sdk/substrate/utils/build-script-utils", default-features = false }

# this is a frame-based runtime, thus importing `frame` with runtime feature enabled.
frame = { path = "./vendor/polkadot-sdk/substrate/frame", default-features = false, package = "polkadot-sdk-frame" }
frame-system = { path = "./vendor/polkadot-sdk/substrate/frame/system", default-features = false }
frame-executive = { path = "./vendor/polkadot-sdk/substrate/frame/executive", default-features = false }
frame-try-runtime = { path = "./vendor/polkadot-sdk/substrate/frame/try-runtime", default-features = false }
frame-support = { path = "./vendor/polkadot-sdk/substrate/frame/support", default-features = false }
frame-benchmarking = { path = "./vendor/polkadot-sdk/substrate/frame/benchmarking", default-features = false }
frame-metadata-hash-extension = { path = "./vendor/polkadot-sdk/substrate/frame/metadata-hash-extension", default-features = false }
frame-system-benchmarking = { path = "./vendor/polkadot-sdk/substrate/frame/system/benchmarking", default-features = false }
frame-system-rpc-runtime-api = { path = "./vendor/polkadot-sdk/substrate/frame/system/rpc/runtime-api", default-features = false }

pallet-aura = { path = "./vendor/polkadot-sdk/substrate/frame/aura", default-features = false }
pallet-grandpa = { path = "./vendor/polkadot-sdk/substrate/frame/grandpa", default-features = false }
pallet-template = { path = "./vendor/polkadot-sdk/substrate/frame/template", default-features = false }
pallet-qf-polkavm-dev = { path = "pallets/qf-polkavm-dev", default-features = false }
sp-api = { path = "./vendor/polkadot-sdk/substrate/primitives/api", default-features = false }
sp-block-builder = { path = "./vendor/polkadot-sdk/substrate/primitives/block-builder", default-features = false }
sp-consensus-aura = { path = "./vendor/polkadot-sdk/substrate/primitives/consensus/aura", default-features = false }
sp-consensus-grandpa = { path = "./vendor/polkadot-sdk/substrate/primitives/consensus/grandpa", default-features = false }
sp-core = { path = "./vendor/polkadot-sdk/substrate/primitives/core", default-features = false }
sp-inherents = { path = "./vendor/polkadot-sdk/substrate/primitives/inherents", default-features = false }
sp-offchain = { path = "./vendor/polkadot-sdk/substrate/primitives/offchain", default-features = false }
sp-session = { path = "./vendor/polkadot-sdk/substrate/primitives/session", default-features = false }
sp-storage = { path = "./vendor/polkadot-sdk/substrate/primitives/storage", default-features = false }
sp-transaction-pool = { path = "./vendor/polkadot-sdk/substrate/primitives/transaction-pool", default-features = false }
substrate-wasm-builder = { path = "./vendor/polkadot-sdk/substrate/utils/wasm-builder", default-features = false }

# pallets that we want to use
pallet-balances = { path = "./vendor/polkadot-sdk/substrate/frame/balances", default-features = false }
pallet-sudo = { path = "./vendor/polkadot-sdk/substrate/frame/sudo", default-features = false }
pallet-timestamp = { path = "./vendor/polkadot-sdk/substrate/frame/timestamp", default-features = false }
pallet-transaction-payment = { path = "./vendor/polkadot-sdk/substrate/frame/transaction-payment", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "./vendor/polkadot-sdk/substrate/frame/transaction-payment/rpc/runtime-api", default-features = false }

# genesis builder that allows us to interact with runtime genesis config
sp-genesis-builder = { path = "./vendor/polkadot-sdk/substrate/primitives/genesis-builder", default-features = false }
sp-runtime = { features = ["serde"], path = "./vendor/polkadot-sdk/substrate/primitives/runtime", default-features = false }
sp-version = { path = "./vendor/polkadot-sdk/substrate/primitives/version", default-features = false }
sp-version-proc-macro = { path = "./vendor/polkadot-sdk/substrate/primitives/version/proc-macro", default-features = false }

# local pallet templates
pallet-minimal-template = { path = "./vendor/polkadot-sdk/templates/minimal/pallets/template", default-features = false }

[profile.release]
# runtime requires unwinding.
panic = "unwind"
opt-level = 3
