[package]
name = "qf-test-runner"
description = "QF PolkaVM program runner. Only for testing purpose."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# parity-scale-codec = { workspace = true, features = ["std"] }

polkavm = { workspace = true }
